* EntityNPC:
	- SetFlyingOverride(bool) - Sets an override to the return value of IsFlying, which is normally based on EntityGridCollisionClass. Can be used to make grounded enemies ignore creep, or flying enemies get hit by creep.
	- ClearFlyingOverride() - Removes any value set by SetFlyingOverride.
* EntityLaser:
	- RecalculateSamplesNextUpdate() - Requests the laser's shape to be fully recalculated next time it updates. Can be used to force the laser to instantly change its MaxDistance/Radius instead of transitioning to it. No effect for OneHit or non-sample lasers.
	- IsMultidimensionalTouched()
	- [Is/Set]PrismTouched()
* EntityTear:
	- [Is/Set]MultidimensionalTouched()
	- [Is/Set]PrismTouched()
* EntityBomb:
	- [Is/Set]PrismTouched()
* EntityKnife:
	- [Is/Set]MultidimensionalTouched()
	- [Is/Set]PrismTouched()
* EntityPickup:
	- TriggerTheresOptionsPickup() - Removes pickups with the same option group (OptionsPickupIndex) as the target pickup.
* LayerState:
	- GetFlip[X/Y](), SetFlip[X/Y]()
* Level:
	- GetMyosotisPickups() - returns the pickups that will be transferred to the next floor by the myosotis trinket effect
* Room:
	- SetItemPool(ItemPoolType PoolType) - Sets the pool to use when the game needs to generate random collectibles in the current room.
	- GetItemPool(int Seed, boolean Raw) - Retrieves the pool the game would use to generate random collectibles in the current room.
* ItemConfigItem:
	- HasCustomCacheTag
	- GetCustomCacheTags
* Added support for a "customcache" attribute in items.xml
	- Formatted as a space-separated list of string tags, same as other similar attributes.
	- Capitalization is ignored - tags are converted to all lowercase.
	- Whenever an item/trinket/effect is added or removed, triggers MC_EVALUATE_CUSTOM_CACHE on the player for each tag specified for that item.
	- MC_EVALUATE_CUSTOM_CACHE will evaluate a number value (starts at 0 by default) which can be retrieved afterwards with player:GetCustomCacheValue(tag)